# sky-save

./: .gitignore  Cargo.toml  README.md
sky-save/: Cargo.toml
sky-save-gui/: Cargo.toml  build.rs
sky-save-gui/res/: icon.rgba
sky-save-gui/src/: main.rs  tabs.rs
sky-save/src/: active.rs  encoding.rs  error.rs  lib.rs  save.rs  stored.rs
sky-save/src/offsets/: active.rs  general.rs  mod.rs  save.rs  stored.rs
src/: active.rs  consts.rs  error.rs  lib.rs  pokemon.rs  save.rs  stored.rs
src/offsets/: mod.rs  save.rs
