[package]
name = "sky-save-gui"
version = "0.0.0"
edition = "2021"
description = "A save file editor for Pokemon Mystery Dungeon - Explorers of Sky."
authors = ["AregevDev <aregevdev@gmail.com>"]
repository = "https://github.com/AregevDev/sky-save"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
sky-save = { path = "../sky-save" }
cushy = { version = "0.4.0" }
