[package]
name = "sky-save"
version = "0.0.0"
edition = "2021"
description = "A save file editor for Pokemon Mystery Dungeon - Explorers of Sky."
authors = ["AregevDev <aregevdev@gmail.com>"]
repository = "https://github.com/AregevDev/sky-save"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
bitvec = "1.0.1"
thiserror = "1.0.63"
